Fixed table link alignment.

--- a/admin/src/components/_ActionMenu.scss
+++ b/admin/src/components/_ActionMenu.scss
@@ -7,7 +7,7 @@
   flex-wrap: nowrap;
   list-style: none;
   margin: 0;
-  padding: 1.14em 1.14em 0;
+  padding: 1.14em 0 1.14em 1.14em;
 }
 
 .action-menu__item {
