--- a/admin/styles/_maintenance.scss
+++ b/admin/styles/_maintenance.scss
@@ -3,7 +3,7 @@
   border-radius: $Border-Radius;
   box-shadow: $Box-Shadow;
   margin-bottom: 2.43em;
-  padding: 1.18em 1.71em;
+  padding: 1.18em 1.75em;
 }
 
 .maintenance-info {
